--- a/chatbot/01-action/domain.yml
+++ b/chatbot/01-action/domain.yml
@@ -1,7 +1,9 @@
-version: '3.0'
+version: '3.1'
+
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
+
 intents:
 - where_i_live
 - greet
@@ -15,13 +17,15 @@ intents:
 - bot_challenge
 entities:
 - place
+
 slots:
   location:
     type: text
     influence_conversation: true
     mappings:
-      - type: from_entity
+      - type: custom
         entity: place
+
 responses:
   utter_greet:
   - text: Hey! How are you?
@@ -36,6 +40,7 @@ responses:
   - text: Bye
   utter_iamabot:
   - text: I am a bot, powered by Rasa.
+
 actions:
 - action_remember_where
 - action_tell_time
