add: add countries

--- a/chatbot/01-custom-action/data/nlu.yml
+++ b/chatbot/01-custom-action/data/nlu.yml
@@ -100,6 +100,10 @@ nlu:
     - lisbon
     - amsterdam
     - seattle
+    - hongkong
+    - shanghai
+    - beijing
+    - berlin
 - intent: where_i_live
   examples: |
     - please remember that i live in [Amsterdam](place)?
