--- a/chatbot/01-custom-action/data/nlu.yml
+++ b/chatbot/01-custom-action/data/nlu.yml
@@ -111,6 +111,7 @@ nlu:
     - reminder. i live in [Lisbon](place)
     - my residence is in [Berlin](place)
     - remember that i live in [london](place)
+    - I live in [Hongkong](place)
 - intent: inquire_time_difference
   examples: |
     - time difference between [Amsterdam](place)?
